src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <description>This is a &quot;base time&quot; from which the offset on each Shift will be calculated.</description>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TicketableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticketable Event</label>
        <referenceTo>PatronTicket__TicketableEvent__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue this prototype campaign can be used for</description>
        <label>Venue</label>
        <referenceTo>PatronTicket__Venue__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Venue_Prototype</fullName>
        <active>true</active>
        <label>Venue Prototype</label>
    </recordTypes>
    <validationRules>
        <fullName>Event_Start_Time_required_for_Prototypes</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.Name,&quot;Prototype&quot;) &amp;&amp; ISBLANK(Event_Start_Time__c)</errorConditionFormula>
        <errorDisplayField>Event_Start_Time__c</errorDisplayField>
        <errorMessage>Event Start Time is a required field for Volunteer Prototype Campaigns, as this field is how we calculate shift start times.</errorMessage>
    </validationRules>
</CustomObject>